Bug 166888 - Password input field is too small after entering a wrong password
Summary: Password input field is too small after entering a wrong password
Status: RESOLVED FIXED
Alias: None
Product: kdesu
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdesu bugs tracker
URL:
Keywords:
: 167072 178125 179796 187721 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-18 01:46 UTC by Elias Probst
Modified: 2009-07-28 23:53 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the too small password input field (30.78 KB, image/png)
2008-07-18 01:47 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2008-07-18 01:46:16 UTC
Version:           SVN r834081 (using Devel)
Installed from:    Compiled sources

How to reproduce:
- Start any command through kdesu
- Enter a wrong password

What happens:
- The 'Password:' input field in the dialog following after having entered the password wrong the 1st time is too small (screenshot in attachment)

What should happen:
- The password field in the 2nd dialog should be sized as the 1st one
Comment 1 Elias Probst 2008-07-18 01:47:50 UTC
Created attachment 26227 [details]
Screenshot showing the too small password input field
Comment 2 Oswald Buddenhagen 2008-09-06 08:38:18 UTC
*** Bug 167072 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-01-06 13:13:02 UTC
*** Bug 179796 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-01-09 18:33:05 UTC
*** Bug 178125 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2009-03-21 14:04:19 UTC
*** Bug 187721 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-03-21 14:07:48 UTC
Here using:

Qt: 4.5.0 + qt-copy-patches-936035
KDE: 4.2.66 (KDE 4.2.66 (KDE 4.3 >= 20090310))
kdelibs svn rev. 939600 / kdebase svn rev. 939602
on ArchLinux i686 - Kernel 2.6.28.7

I can't reproduce this anymore.
Can anyone else confirm this on SVN?
Thanks
Comment 7 Elias Probst 2009-06-08 10:36:11 UTC
It is still too small using KDE-4.2.4 and Qt-4.5.1.
Comment 8 Dario Andres 2009-07-07 22:21:11 UTC
It works for me on:

Qt: 4.5.2 (KDE-Qt git commit 46a247a2c9a8c0c4456a02f6a0922d859d88fe76
        Date:   Fri Jun 26 13:45:37 2009 +0200)
KDE: 4.3.60 (KDE 4.3.60 (KDE 4.4 >= 20090624))
kdelibs svn rev. 989682 / kdebase svn rev. 989682
on ArchLinux i686 - Kernel 2.6.30

I guess it got fixed on KDE4.3 code.
Comment 9 Christoph Feck 2009-07-28 23:52:05 UTC
SVN commit 1003837 by cfeck:

First set pixmap, then show()

BUG: 166888


 M  +1 -1      ktitlewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1003837
Comment 10 Christoph Feck 2009-07-28 23:53:08 UTC
SVN commit 1003838 by cfeck:

First set pixmap, then show() (backport r1003837)

CCBUG: 166888


 M  +1 -1      ktitlewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1003838