First set pixmap, then show()

BUG: 166888

svn path=/trunk/KDE/kdelibs/; revision=1003837